--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Homework 11 color switch</title>
 </head>
 <body>
     <button type="button" data-action="start">Start</button>
     <button type="button" data-action="stop">Stop</button>
     
-    <script src="./index.js" type="module"></script>
+    <script src="./color-switch.js" type="module"></script>
 </body>
 </html>
